fix padding on wraper

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,8 @@ header a:hover {
 .about-wrapper {
   background: linear-gradient(#5e4a88, #6973AD);
   position: relative;
+  width: 100vw;
+  overflow: hidden;
   z-index: -9;
 }
 
@@ -461,7 +463,8 @@ header a:hover {
 }
 
 .division-wrapper {
-  width: 100%;
+  width: 100vw;
+  overflow: hidden;
   padding-top: 150px;
   padding-bottom: 100px;
   position: relative;
